      completely suppress the given tags.
    + [RA] Support comments and blank lines in --tags-from-file files.
    + [RA] Run the check modules in sorted order.

  * lib/Lintian/Tag/Info.pm:
    + [RA] Add a code method that returns the tag code corresponding to
      the severity and certainty for a tag, based on get_tag_code from
      Tags.pm.
  * lib/Tags.pm:
    + [RA] Support suppressing a list of tags.
  * lib/Util.pm:
    + [RA] Consume all output from extracting the control file of a binary
      package before closing the pipe.

  * man/lintian.1:
    + [RA] Document --suppress-tags and --suppress-tags-from-file.
    + [RA] Document format of --tags-from-file.

  * t/runtests:
    + [RA] Unwrap the Options field so that it can be continued.
    + [RA] Replace TESTSET in Options with the root of the test suite so
      that Lintian options referring to files can be tested with files in
      the test suite directory.

 -- Russ Allbery <rra@debian.org>  Mon, 23 Nov 2009 02:20:29 -0800

lintian (2.2.18) unstable; urgency=low

  The "synchronize severities with ftpmaster's Lintian checks" release.

  * Summary of tag changes:
    + Removed:
      - copyright-lists-upstream-authors-with-dh_make-boilerplate
    + Promoted from experimental:
      - spelling-error-in-binary
      - template-uses-unsplit-choices

  * checks/binaries.desc:
    + [RA] Remove experimental marker on spelling-error-in-binary.  Change
      severity to minor; spelling errors are minor bugs.
    + [RA] library-in-debug-or-profile-should-not-be-stripped,
      binary-or-shlib-defines-rpath, arch-dependent-file-in-usr-share, and
      binary-in-etc, binary-file-compressed-with-upx,
      binary-with-bad-dynamic-table, and embedded-zlib are now
      serious since they can result in ftpmaster rejects.  embedded-zlib,
      missing-dependency-on-libc, and binary-or-shlib-defines-rpath are
      possible rather than certain since overrides are allowed.
  * checks/changelog-file: